patched .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
     - conda install -q conda-build conda-verify
     - conda build conda -c kutaslab -c defaults -c conda-forge
-    - conda create --name mkconda_env mkconda -c local -c defaults -c conda-forge
+    - conda create --name mkconda_env mkconda -c local -c kutaslab -c defaults -c conda-forge
     - conda activate mkconda_env 
     - conda list
     - lscpu
