--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,7 +21,7 @@
 
 package:
   name: mkconda
-  version: "0.0.0"
+  version: "0.0.1.dev"
 
 requirements:
   # strict pins for reproducible analyses?
