--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -2,11 +2,11 @@
 #    build this file into an installable (meta)package mkconda like
 #    so, then upload it to the Anaconda kutaslab channel
 #
-#        conda build . -c kutaslab -c defaults -c conda-forge
+#        conda build . -c kutaslab -c defaults -c r -c conda-forge
 #
 #     Notes:
-#         * the channels must be specified in this order, and also
-#           upon user installation
+#         * at present channel order matters during the build and
+#           user conda install 
 #
 #         * don't bother with conda metapackage ... works, but no footprints
 #
@@ -16,19 +16,20 @@
 #
 #        conda create --name my_env_name
 #        conda activate my_env_name
-#        conda install mkconda -c kutaslab -c defaults -c conda-forge
+#        conda install mkconda -c kutaslab -c defaults -c r -c conda-forge 
 #
 
 package:
   name: mkconda
-  version: "0.0.1"
+  version: "0.0.2"
 
 requirements:
   # hard pins for reproducible analyses
   run:
-    - {{ pin_compatible('mkpy', lower_bound='0.1.5', upper_bound='0.1.5' )}}
+    - {{ pin_compatible('mkpy', lower_bound='0.1.6', upper_bound='0.1.6' )}}
     - {{ pin_compatible('fitgrid', lower_bound='0.4.5', upper_bound='0.4.5') }}
     - r-base
+    - zeromq !=4.2.5  # buggy version in this env
     - tornado
     - jupyter
     - rstudio
