--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install:
 install:
     - conda install -q conda-build conda-verify
 #    - bash ./ci/pypi2conda.sh  # wrap pypi packages for conda build see meta.yaml 
-    - conda build conda -c kutaslab -c defaults -c conda-forge
-    - conda create --name mkconda_env mkconda  -c local -c kutaslab -c defaults -c conda-forge
+    - conda build conda -c kutaslab -c defaults -c r -c conda-forge
+    - conda create --name mkconda_env mkconda  -c local -c kutaslab -c defaults -c r -c conda-forge
     - conda activate mkconda_env 
     - conda list
     - lscpu
