--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -2,7 +2,7 @@
 #    build this file into an installable (meta)package mkconda like
 #    so, then upload it to the Anaconda kutaslab channel
 #
-#        conda build . -c kutaslab -c defaults -c r -c conda-forge
+#        conda build . -c kutaslab -c defaults -c conda-forge
 #
 #     Notes:
 #         * at present channel order matters during the build and
@@ -16,7 +16,7 @@
 #
 #        conda create --name my_env_name
 #        conda activate my_env_name
-#        conda install mkconda -c kutaslab -c defaults -c r -c conda-forge 
+#        conda install mkconda -c kutaslab -c defaults -c conda-forge 
 #
 
 package:
