added libiconv dependency

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -36,6 +36,7 @@ requirements:
     - rstudio
     - r-irkernel
     - bottleneck 
+    - libiconv  # rpy2 needs it, not included, reasons unknown
     - numpy  # these should already be satisfied
     - scipy
     - pandas 
