--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,13 +21,13 @@
 
 package:
   name: mkconda
-  version: "0.0.4.dev0"
+  version: "0.0.4"
 
 requirements:
   # hard pins for reproducible analyses
   run:
-    - {{ pin_compatible('mkpy', lower_bound='0.1.6', upper_bound='0.1.6' )}}
-    - {{ pin_compatible('fitgrid', lower_bound='0.4.5', upper_bound='0.4.5') }}
+    - mkpy ==0.1.6  # {{ pin_compatible('mkpy', lower_bound='0.1.6', upper_bound='0.1.6' )}}
+    - fitgrid ==0.4.6  # {{ pin_compatible('fitgrid', lower_bound='0.4.6', upper_bound='0.4.6') }}
     - r-base
     - zeromq !=4.2.5  # buggy version in this env
     - rpy2 <3.0  # else fitgrid fails on py2ri
