--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # mkconda requires a current GIT_TOKEN on TravisCI kutaslab/mkconda
 env:
     - PACKAGE_NAME: mkconda   # for the conda_upload.sh deploy script
+    # - CROOT: /tmp/mkconda/conda-bld
 language: minimal
 before_install:
     - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
@@ -11,16 +12,22 @@ before_install:
     - conda info -a
 install:
     - conda install -q conda-build conda-verify
-    - conda build conda -c kutaslab -c defaults -c conda-forge
-    - conda create --name mkconda_env mkconda -c local -c kutaslab -c defaults -c conda-forge
-    - conda activate mkconda_env 
+    - conda clean --all
+    - mkdir -p /tmp/mkconda/conda-bld
+    - cp -r ./conda/conda-bld/* /tmp/mkconda/conda-bld
+    # - conda build conda -c kutaslab -c defaults -c conda-forge
+    # - conda create --name mkconda_env mkconda -c local -c kutaslab -c defaults -c conda-forge
+    # build env from recipe file snapshot 
+    - conda create --name run_env --file ./conda/mkconda_env_recipe.txt
+    - conda activate run_env
     - conda list
     - lscpu
     - python -c 'import numpy; numpy.show_config()'
-    - python -c "import mkpy; print(mkpy.__version__)"
-    - python -c "import fitgrid; print(fitgrid.__version__)"
-# script:
-# after_success:
+    - python -c 'import matplotlib; print(matplotlib.__version__)'
+    - python -c 'import mkpy; print(mkpy.__version__)'
+    - python -c 'import fitgrid; print(fitgrid.__version__)'
+after_success:
+    - conda deactivate   # fall back to build env
 before_deploy:
     - conda install anaconda-client
     - conda list
@@ -29,4 +36,4 @@ deploy:
       skip_cleanup: true
       script: bash ./ci/conda_upload.sh
       on:
-        all_branches: true
+          all_branches: true
