--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,32 +18,42 @@
 #        conda activate my_env_name
 #        conda install mkconda -c kutaslab -c defaults -c conda-forge 
 #
+{% set numpy_pin = "1.16.4" %}  # same as fitgrid
+{% set mkpy_pin = "0.1.6" %}
+{% set fitgrid_pin = "0.4.8" %}
 
 package:
   name: mkconda
   version: "0.0.4"
 
 requirements:
-  # hard pins for reproducible analyses
+  # build:
+  host:
+    - python =3.6
+    - mkl  # should be in anaconda by default nowadays
+    - blas=1.0  # important, pulls from anaconda w/ MKL, blocks conda-forge openblas
+  # host:
   run:
-    - mkpy ==0.1.6
-    - fitgrid ==0.4.6
-    - blas =1.0  # 1.0-mkl for fitgrid thread setting, else -rstudio +tidyverse promotes
-    - r-base
+    - mkpy ={{ mkpy_pin }}
+    - fitgrid ={{ fitgrid_pin }}
+    - spudtr
+    - numpy ={{ numpy_pin }}
+    - numpy-base ={{ numpy_pin }}
     - zeromq !=4.2.5  # buggy version in this env
+    - r-base  # not mro
     - rpy2 <3.0  # else fitgrid fails on py2ri
+    - matplotlib >=3.0
     - tornado
     - jupyter
-    # - rstudio  # chokes conda env resolver, TravisCI times out
-    - r-tidyverse
     - r-irkernel
-    - bottleneck
-    - libiconv  # rpy2 needs it, not included, reasons unknown
-    - numpy  # these should already be satisfied
-    - scipy
-    - pandas
-    - matplotlib >=3.0
-    - statsmodels
+    - bottleneck 
+    - libiconv  # rpy2 needs it, not included this env, reason unknown
+    - r-tidyverse
+    - rstudio
+#    - statsmodels
+#    - numpy  # these should already be satisfied by mkpy and fitgrid
+#    - scipy
+#    - pandas 
 
 test:
   imports:
@@ -51,5 +61,5 @@ test:
     - fitgrid
     - numpy
     - scipy
-    - statsmodels
     - matplotlib
+    - statsmodels
