--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,23 @@ install:
     - python -c 'import mkpy; print(mkpy.__version__)'
     - python -c 'import fitgrid; print(fitgrid.__version__)'
 after_success:
+    - git clone https://github.com/kutaslab/mkpy pkgs/mkpy
+    - cd pkgs/mkpy
+    - pytest
+    - cd ../..
+
+    - git clone https://github.com/kutaslab/spudtr pkgs/spudtr
+    - cd pkgs/spudtr
+    - pytest
+    - cd ../..
+
+    - git clone https://github.com/kutaslab/fitgrid pkgs/fitgrid
+    - cd pkgs/fitgrid
+    - pytest
+    - cd ../..
+    - pwd
+    - ls -l
+
     - conda deactivate   # fall back to build env
 before_deploy:
     - conda install anaconda-client
