--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,26 +18,34 @@
 #        conda activate my_env_name
 #        conda install mkconda -c kutaslab -c defaults -c conda-forge 
 #
+{% set python_pin = "3.6" %}  # 
 {% set numpy_pin = "1.16.4" %}  # same as fitgrid
-{% set mkpy_pin = "0.1.9" %}  # min version to exclude tests from package
+{% set mkpy_pin = "0.2.0" %}  # min version to exclude tests from package
 {% set spudtr_pin = "0.0.4" %}  # ""   ""
 {% set fitgrid_pin = "0.4.9" %}
 
 package:
   name: mkconda
-  version: "0.0.7"
+  version: "0.0.8"
 
 requirements:
-  host:
-    - python =3.6
+  #  host:
+  #    - python=3.6.9   # cap at 3.6.9 else importlib pandas pytable import fails
+  #    - mkl  # should be in anaconda by default nowadays
+  #    - blas=1.0  # important, pulls from anaconda w/ MKL, blocks conda-forge openblas
+  build:
+    - python ={{ python_pin }}   # cap at 3.6.9 else importlib pandas pytable import fails
     - mkl  # should be in anaconda by default nowadays
     - blas=1.0  # important, pulls from anaconda w/ MKL, blocks conda-forge openblas
   run:
+    - python ={{ python_pin }}
+    - mkl  # should be in anaconda by default nowadays
+    - blas=1.0  # important, pulls from anaconda w/ MKL, blocks conda-forge openblas
     - mkpy >={{ mkpy_pin }}
     - fitgrid >={{ fitgrid_pin }}
     - spudtr >={{ spudtr_pin }}
-    - numpy ={{ numpy_pin }}
-    - numpy-base ={{ numpy_pin }}
+    - numpy =={{ numpy_pin }}
+    - numpy-base =={{ numpy_pin }}
     - zeromq !=4.2.5  # buggy version in this env
     - r-base  # not mro
     - rpy2 <3.0  # else fitgrid fails on py2ri
