--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -4,6 +4,7 @@ package:
 
 build:
   noarch: python
+  string: {{environ.get("GIT_ABBREV_COMMIT", "no_git_abbrev_commit") }}_{{ environ.get("PKG_BUILDNUM", "no_pkg_buildnum") }}
 
 requirements:
   run:
