--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 build:
   noarch: python
-  string: g{{environ.get("GIT_ABBREV_COMMIT", "no_git_abbrev_commit") }}_0}}
+  string: {{environ.get("GIT_ABBREV_COMMIT", "no_git_abbrev_commit")}}_0
 
 requirements:
   run:
