drop cudatoolkit-dev pending install bug fix

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -16,7 +16,7 @@ requirements:
     - numba
     - spyder
     - rapids
-    - cudatoolkit-dev
+    # - cudatoolkit-dev
     - pytorch
     - r-tidyverse
     - r-irkernel
