--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -15,8 +15,8 @@ requirements:
     - jupyterlab
     - numba
     - spyder
-    - rapids
-    # - cudatoolkit-dev
+    - rapids=21.08
+    - cudatoolkit-dev=11.2
     - pytorch
     - r-tidyverse
     - r-irkernel
